syntax = "proto3";

option java_package = "com.ravisharma.playbackmusic.new_work.data_proto";
option java_multiple_files = true;

message QueueState {
  repeated string locations = 1;
  int32 startIndex = 2;
  int64 startPositionMs = 3;
}